@@ -1,3 +1,8 @@
+2006-09-11  Michael Schlenker <mic42@users.sourceforge.net>
+        * ldap.tcl      Fixed missing tlsHandshakeInProgress variable when
+          ldap.man      when using ldap::connect.
+          pkgIndex.tcl
+          
 2006-09-08  Michael Schlenker <mic42@users.sourceforge.net>
 
         * ldapx.tcl     New subpackage ldapx provides a snit
